fix: solución de issues por inyección de dependencias en OrdenTrabajoService